fixed word wrap. set word break

--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Comfortaa&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Rubik&display=swap");
+
 html {
-    background: linear-gradient( 116.83deg, rgba(54, 255, 167, 0.2) 0.55%, rgba(229, 134, 206, 0.2) 100%), linear-gradient(179.06deg, #62ebc0 -5.97%, #5b46e7 125.73%);
+    background: linear-gradient(116.83deg, rgba(54, 255, 167, 0.2) 0.55%, rgba(229, 134, 206, 0.2) 100%), linear-gradient(179.06deg, #62ebc0 -5.97%, #5b46e7 125.73%);
 }
 
 body {
@@ -248,6 +249,10 @@ h1 {
     /* тк сдвинули блок влево на 2px уменьшим маржин чтобы сохранить прежний размер */
     /* margin-left: 10px; */
     box-sizing: border-box;
+
+    /* чтобы блок не расширялся когда не умешаются в ширину нереально большие слова */
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .user_input {
@@ -290,7 +295,7 @@ h1 {
 
 .listElement {
     /* background: rgb(204, 231, 251); */
-    background: linear-gradient( 90deg, rgba(204, 231, 251, 1) 0%, rgba(177, 253, 235, 1) 100%);
+    background: linear-gradient(90deg, rgba(204, 231, 251, 1) 0%, rgba(177, 253, 235, 1) 100%);
     box-sizing: border-box;
     max-width: 800px;
     min-height: 60px;
@@ -314,6 +319,10 @@ h1 {
     margin-right: 14px;
     word-wrap: break-word;
     flex-grow: 1;
+
+    /* чтобы блок не расширялся когда не умешаются в ширину нереально большие слова */
+    word-wrap: break-word;
+    word-break: break-word;
 }
 
 .listElStars {
